[tool.poetry]
name = "raspi-poe-mon"
version = "1.0.0b1"
description = "A controller for the display and fan of the Raspberry Pi Power Over Ethernet HAT (Type B), compatible with Raspberry Pi 3B+/4B"
readme = "README.md"
authors = ["Sebastian Straub <sstraub@posteo.de>"]
license = "MIT License"
packages = [{ include = "raspi_poe_mon", from = "src" }]
include = ["src/raspi_poe_mon/res/*"]

[tool.poetry.scripts]
raspi-poe-mon = "raspi_poe_mon.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
luma-oled = "^3.12"
pillow = "^10.0"
psutil = "^5.9.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
luma-emulator = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0"
ruff = "^0.0.280"
isort = "^5.12.0"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
ignore = ["F401"]

[tool.isort]
py_version = 39
line_length = 100
multi_line_output = 2
skip = ["__init__.py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov src --cov-report=term --cov-report=xml"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
