[tool.poetry]
name = "raspi-poe-mon"
version = "1.0.0b2"
description = "A controller for the display and fan of the Raspberry Pi Power Over Ethernet HAT (Type B), compatible with Raspberry Pi 3B+/4B"
readme = "README.md"
authors = ["Sebastian Straub <sstraub@posteo.de>"]
license = "MIT License"
homepage = "https://github.com/klamann/raspi-poe-mon"
repository = "https://github.com/klamann/raspi-poe-mon"
keywords = ["raspberry-pi", "oled-display", "monitoring", "waveshare", "power-over-ethernet"]
classifiers = [
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]

packages = [{ include = "raspi_poe_mon", from = "src" }]
include = ["src/raspi_poe_mon/res/*"]

[tool.poetry.scripts]
raspi-poe-mon = "raspi_poe_mon.main:app"
# generate docs with `typer raspi_poe_mon.main utils docs`

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.12.3"}
luma-oled = "^3.12"
pillow = "^10.4"
psutil = "^6.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
pytest-timeout = "^2.3.1"
luma-emulator = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0"
ruff = "^0.6"
isort = "^5.13"
setuptools = "^74.1"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
ignore = ["F401"]

[tool.isort]
py_version = 39
line_length = 100
multi_line_output = 2
skip = ["__init__.py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov src --cov-report=term --cov-report=xml"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
