[tool.poetry]
name = "raspi-poe-mon"
version = "1.1.0"
description = "A controller for the display and fan of the Raspberry Pi Power Over Ethernet HAT (Type B), compatible with Raspberry Pi 3B+/4B"
readme = "README.md"
authors = ["Sebastian Straub <sstraub@posteo.de>"]
license = "MIT License"
homepage = "https://github.com/klamann/raspi-poe-mon"
repository = "https://github.com/klamann/raspi-poe-mon"
keywords = ["raspberry-pi", "oled-display", "monitoring", "waveshare", "power-over-ethernet"]
classifiers = [
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]

packages = [{ include = "raspi_poe_mon", from = "src" }]
include = ["src/raspi_poe_mon/res/*"]

[tool.poetry.scripts]
raspi-poe-mon = "raspi_poe_mon.main:app"
# generate docs with `typer raspi_poe_mon.main utils docs`

[tool.poetry.dependencies]
python = "^3.9"
typer = {version = "~0.20.0"}
click = {version = "~8.1.0"}
luma-oled = "^3.14"
pillow = "^11.3"
psutil = "^7.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.4"
pytest-cov = "^7.0"
pytest-timeout = "^2.4.0"
luma-emulator = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3"
ruff = "^0.14"
setuptools = "^80.9"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["F401"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov src --cov-report=term --cov-report=xml --log-cli-level='DEBUG' --log-cli-format='%(asctime)s.%(msecs)03d [%(levelname)s]: %(message)s'"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
